[package]
name = "eskf"
version = "0.2.0"
authors = ["Jørgen Nordmoen <jorgen@nordmoen.net>"]
description = "Navigation filter based on an Error State Kalman Filter (ESKF)"
keywords = ["navigation", "filter", "orientation", "kalman"]
license = "MIT OR Apache-2.0"
categories = ["embedded", "no-std", "mathematics", "science::robotics"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/nordmoen/eskf-rs"
repository = "https://github.com/nordmoen/eskf-rs"
documentation = "https://docs.rs/eskf"
exclude = ["docs/*"]

[features]
default = ["full-reset"]
full-reset = []
cov-symmetric = []
cov-joseph = []

[dependencies]
nalgebra = { version = "0.32", default-features = false }
libm = "0.2.6"

[dev-dependencies]
approx = "0.5.0"
nalgebra = { version = "0.32", features = ["serde-serialize", "debug"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plotly = "0.6.0"

[[example]]
name = "plot_carla"
required-features = ["std"]
